Adiconado os imports email.message e ssl

--- a/app/settings.json
+++ b/app/settings.json
@@ -1,4 +1,5 @@
 {
     "EMAIL": "enviadordeemail99@gmail.com",
-    "PASSWORD": "freefire1"
+    "PASSWORD": "freefire1",
+    "TO": "jhonathascesar232@gmail.com"
 }
